k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mancala
  labels:
    name: mancala
