k8s/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  labels:
    app: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name: bot
        image: ghcr.io/laerson/mancala:latest-bot
        ports:
        - containerPort: 50057
        readinessProbe:
          tcpSocket:
            port: 50057
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50057
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: bot
  labels:
    app: bot
spec:
  ports:
  - port: 50057
    targetPort: 50057
    name: grpc
  selector:
    app: bot
  type: ClusterIP
