k8s/event-bus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name: event-bus
        image: ghcr.io/laerson/mancala:latest-event-bus
        ports:
        - containerPort: 50053
        readinessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
  labels:
    app: event-bus
spec:
  ports:
  - port: 50053
    targetPort: 50053
    name: grpc
  selector:
    app: event-bus
  type: ClusterIP
