k8s/games.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games
  labels:
    app: games
spec:
  replicas: 2
  selector:
    matchLabels:
      app: games
  template:
    metadata:
      labels:
        app: games
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name: games
        image: ghcr.io/laerson/mancala:latest-games
        ports:
        - containerPort: 50052
        readinessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: games
  labels:
    app: games
spec:
  ports:
  - port: 50052
    targetPort: 50052
    name: grpc
  selector:
    app: games
  type: ClusterIP
