k8s/matchmaking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matchmaking
  labels:
    app: matchmaking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matchmaking
  template:
    metadata:
      labels:
        app: matchmaking
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name: matchmaking
        image: ghcr.io/laerson/mancala:latest-matchmaking
        ports:
        - containerPort: 50054
        readinessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: matchmaking
  labels:
    app: matchmaking
spec:
  ports:
  - port: 50054
    targetPort: 50054
    name: grpc
  selector:
    app: matchmaking
  type: ClusterIP
