k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  labels:
    app: notifications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name: notifications
        image: ghcr.io/laerson/mancala:latest-notifications
        ports:
        - containerPort: 50056
        readinessProbe:
          tcpSocket:
            port: 50056
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 50056
          initialDelaySeconds: 10
          periodSeconds: 30
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: notifications
  labels:
    app: notifications
spec:
  ports:
  - port: 50056
    targetPort: 50056
    name: grpc
  selector:
    app: notifications
  type: ClusterIP
